MPTA: don't allow more than one touchpoint to react to mouse

On mouse press, if MPTA filters events for a child, addTouchPoint()
can be called once during filtering and start reacting to that point,
and then called again during direct delivery of the same mouse press.
Now it will ignore the second of the declared touchpoint prototypes
because the first one is already "taken", and a mouse event can never
provide more than one point. Followup to
0012f8bd152a36a67abc696465f27d612625b5d9

Fixes: QTBUG-83662
Change-Id: Ia97600441f0a2633f77b0db9c83cc4de3a9e5931
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 9b64eee22d9e2d40d1283e8844cb1d8899232547)
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>