tests/auto/quick/qquickmultipointtoucharea/tst_qquickmultipointtoucharea.cpp
@@ -74,6 +74,7 @@ private slots:
     void cancel();
     void stationaryTouchWithChangingPressure();
     void touchFiltering();
+    void nestedPinchAreaMouse();
 
 private:
     QQuickView *createAndShowView(const QString &file);
@@ -1395,6 +1396,53 @@ void tst_QQuickMultiPointTouchArea::touchFiltering() // QTBUG-74028
     QTRY_COMPARE(mpta->parentItem()->property("mptaPoint").toPoint(), pt);
     QCOMPARE(mpta->parentItem()->property("maPoint").toPoint(), ma->boundingRect().center().toPoint());
     QCOMPARE(mptaSpy.count(), 1);
+}
+
+void tst_QQuickMultiPointTouchArea::nestedPinchAreaMouse() // QTBUG-83662
+{
+    QScopedPointer<QQuickView> window(createAndShowView("nestedPinchArea.qml"));
+    QQuickMultiPointTouchArea *mpta = qobject_cast<QQuickMultiPointTouchArea *>(window->rootObject());
+    QVERIFY(mpta);
+
+    QQuickTouchPoint *point1 = mpta->findChild<QQuickTouchPoint*>("point1");
+    QCOMPARE(point1->pressed(), false);
+    QQuickTouchPoint *point2 = mpta->findChild<QQuickTouchPoint*>("point2");
+    QCOMPARE(point2->pressed(), false);
+    QSignalSpy pressedSpy(mpta, &QQuickMultiPointTouchArea::pressed);
+    QSignalSpy updatedSpy(mpta, &QQuickMultiPointTouchArea::updated);
+    QSignalSpy releasedSpy(mpta, &QQuickMultiPointTouchArea::released);
+
+    QPoint p1(20, 20);
+    QTest::mousePress(window.data(), Qt::LeftButton, Qt::NoModifier, p1);
+    QCOMPARE(point1->pressed(), true);
+    QCOMPARE(point2->pressed(), false);
+    QCOMPARE(pressedSpy.count(), 1);
+    QCOMPARE(mpta->property("pressedCount").toInt(), 1);
+    QCOMPARE(updatedSpy.count(), 0);
+    QCOMPARE(mpta->property("updatedCount").toInt(), 0);
+    QCOMPARE(releasedSpy.count(), 0);
+    QCOMPARE(mpta->property("releasedCount").toInt(), 0);
+
+    p1 += QPoint(0, 15);
+    QTest::mouseMove(window.data(), p1);
+    QCOMPARE(point1->pressed(), true);
+    QCOMPARE(point2->pressed(), false);
+    QCOMPARE(pressedSpy.count(), 1);
+    QCOMPARE(mpta->property("pressedCount").toInt(), 1);
+    QCOMPARE(updatedSpy.count(), 1);
+    QCOMPARE(mpta->property("updatedCount").toInt(), 1);
+    QCOMPARE(releasedSpy.count(), 0);
+    QCOMPARE(mpta->property("releasedCount").toInt(), 0);
+
+    QTest::mouseRelease(window.data(), Qt::LeftButton, Qt::NoModifier, p1);
+    QCOMPARE(point1->pressed(), false);
+    QCOMPARE(point2->pressed(), false);
+    QCOMPARE(pressedSpy.count(), 1);
+    QCOMPARE(mpta->property("pressedCount").toInt(), 1);
+    QCOMPARE(updatedSpy.count(), 1);
+    QCOMPARE(mpta->property("updatedCount").toInt(), 1);
+    QCOMPARE(releasedSpy.count(), 1);
+    QCOMPARE(mpta->property("releasedCount").toInt(), 1);
 }
 
 QTEST_MAIN(tst_QQuickMultiPointTouchArea)
